# tinyalloc

./: .gitattributes  .gitignore  .gitmodules  .sccignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  INDEX.md  MVP.md  OPTIMIZATIONS.md  PHF_OPTIMIZATION.md  README.md  ROADMAP.md  alignment_analyzer.rs  build.rs  build.sh  init.c  issue.md  justfile  mimalloc_poc.cpp  nob.c  performance_issues.md  plan.md  rustfmt.toml  test.js  test_sizes.rs  tinyalloc.c  tinyalloc.cc  tinyalloc.h  wrapper.c
benches/: allocator_bench.rs  bench_sample.rs  comparison_bench.rs  ini_std.rs  ini_tiny.rs  sample.ini
crates/tinyalloc-alloc/: Cargo.toml
crates/tinyalloc-alloc/src/: allocation.rs  arena.rs  classes.rs  config.rs  heap.rs  large.rs  lib.rs  metrics.rs  queue.rs  segment.rs  slab.rs  static_.rs
crates/tinyalloc-array/: Cargo.toml
crates/tinyalloc-array/src/: array.rs  lib.rs  slice.rs  tests.rs
crates/tinyalloc-barrier/: Cargo.toml
crates/tinyalloc-barrier/src/: lib.rs  tests.rs
crates/tinyalloc-bitmap/: Cargo.toml
crates/tinyalloc-bitmap/src/: bitmap.rs  error.rs  lib.rs  numeric.rs  tests.rs
crates/tinyalloc-config/: Cargo.toml
crates/tinyalloc-config/src/: classes.rs  config.rs  helper.rs  lib.rs  metrics.rs
crates/tinyalloc-container/: Cargo.toml
crates/tinyalloc-container/src/: lib.rs  mqueue.rs  mvec.rs  queue.rs
crates/tinyalloc-core/: Cargo.toml
crates/tinyalloc-core/src/: lib.rs  page.rs  size.rs  vm.rs
crates/tinyalloc-list/: Cargo.toml
crates/tinyalloc-list/src/: lib.rs  tests.rs
crates/tinyalloc-mapped/: Cargo.toml
crates/tinyalloc-mapped/src/: vec.rs
crates/tinyalloc-sys/: Cargo.toml
crates/tinyalloc-sys/src/: lib.rs  mapper.rs  page.rs  posix.rs  region.rs  size.rs  tests.rs  unix.rs  vm.rs  windows.rs
crates/tinyalloc-sys/src/system/: mod.rs  posix.rs  tests.rs  windows.rs
crates/tinyalloc-vector/: Cargo.toml
crates/tinyalloc-vector/src/: lib.rs  mvec.rs
examples/: alloc_only.rs  alloc_only_benchmark.rs  global.rs  ini.rs  ini_bench.rs  multi.rs  queue_test.rs  size_class_test.rs
include/tinyalloc/: tinyalloc-config.h  tinyalloc-internal.h  tinyalloc.h
lib/: arena.c  bin.c  bitmap.c  heap.c  list.c  math.c  segment.c
lib/platform/: page.c  posix.c  unix.c  windows.c
src/: ffi.rs  init.rs  lib.rs
tests/: CMakeLists.txt  test_arena.c  test_bitmap.c  test_common.c  test_list.c  test_math.c  test_page.c  test_segment.c
