[package]
name = "tinyalloc"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
  "crates/tinyalloc-alloc",
  "crates/tinyalloc-bitmap",
  "crates/tinyalloc-list",
  "crates/tinyalloc-sys",
]

[workspace.dependencies]
getset = "0.1.6"
libc = "0.2.175"
enumset = "1.1.10"

tinyalloc-alloc = { path = "crates/tinyalloc-alloc" }
tinyalloc-bitmap = { path = "crates/tinyalloc-bitmap" }
tinyalloc-list = { path = "crates/tinyalloc-list" }
tinyalloc-sys = { path = "crates/tinyalloc-sys" }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.release]
panic = "abort"
strip = "symbols"
lto = true

[dependencies]
tinyalloc-alloc = { workspace = true }
tinyalloc-bitmap = { workspace = true }
tinyalloc-list = { workspace = true }
tinyalloc-sys = { workspace = true }
