[package]
name = "tinyalloc"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace]
resolver = "3"
members = [
  "crates/tinyalloc-alloc",
  "crates/tinyalloc-array",
  "crates/tinyalloc-bitmap",
  "crates/tinyalloc-list",
  "crates/tinyalloc-sys",
]

[workspace.dependencies]
getset = "0.1.6"
libc = "0.2.175"
enumset = "1.1.10"
criterion = "0.7.0"
windows-sys = "0.59.0"
spin = "0.10.0"

tinyalloc-alloc = { path = "crates/tinyalloc-alloc" }
tinyalloc-array = { path = "crates/tinyalloc-array" }
tinyalloc-bitmap = { path = "crates/tinyalloc-bitmap" }
tinyalloc-list = { path = "crates/tinyalloc-list" }
tinyalloc-sys = { path = "crates/tinyalloc-sys" }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.release]
panic = "abort"
strip = "symbols"
lto = true

[build-dependencies]
cbindgen = "0.29.0"

[dev-dependencies]
libc = { workspace = true }
criterion = { workspace = true }

[dependencies]
tinyalloc-alloc = { workspace = true }
spin = { workspace = true }
tinyalloc-sys = { workspace = true }
libc = { workspace = true, optional = true }

[features]
default = []
ffi = ["libc"]

[[bench]]
name = "bench_sample"
harness = false

[[bench]]
name = "allocator_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false

[[bench]]
name = "ini_std"
harness = false

[[bench]]
name = "ini_tiny"
harness = false
