[package]
name = "tinyalloc-alloc"
version = "0.1.0"
edition = "2024"

[dependencies]
tinyalloc-sys = { workspace = true }
tinyalloc-list = { workspace = true }
tinyalloc-bitmap = { workspace = true }
tinyalloc-array = { workspace = true }

getset = { workspace = true }
enumset = { workspace = true }

